expense-app/main/default/objects/Income__c/Income__c.object-meta.xml
<CustomObject>
    <description>used to capture income for the Expense Tracker app</description>
    <label>Income</label>
    <nameField>
        <label>Income Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Incomes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>