expense-app/main/default/objects/Income__c/fields/Additional_Info__c.field-meta.xml
<CustomField>
    <fullName>Additional_Info__c</fullName>
    <description>Additional information about this income</description>
    <label>Additional Info</label>
    <type>TextArea</type>
</CustomField>