expense-app/main/default/objects/Income__c/fields/Ledger__c.field-meta.xml
<CustomField>
    <fullName>Ledger__c</fullName>
    <label>Ledger</label>
    <referenceTo>Ledger__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>