expense-app/main/default/objects/Income__c/fields/Sub_Type__c.field-meta.xml
<CustomField>
    <fullName>Sub_Type__c</fullName>
    <defaultValue>&apos;Salary&apos;</defaultValue>
    <label>Sub-Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birthday</fullName>
            </value>
            <value>
                <fullName>Bonus</fullName>
            </value>
            <value>
                <fullName>Capital Gain</fullName>
            </value>
            <value>
                <fullName>CNY</fullName>
            </value>
            <value>
                <fullName>Dividend</fullName>
            </value>
            <value>
                <fullName>Income Tax Refund</fullName>
            </value>
            <value>
                <fullName>Inheritance</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Loyalty</fullName>
            </value>
            <value>
                <fullName>Medicare</fullName>
            </value>
            <value>
                <fullName>Reimbursement</fullName>
            </value>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Salary</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Special Occasion</fullName>
            </value>
            <value>
                <fullName>Superannuation</fullName>
            </value>
            <value>
                <fullName>Winning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>