expense-app/main/default/objects/Income__c/fields/Tracking_Account__c.field-meta.xml
<CustomField>
    <fullName>Tracking_Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Tracking Account</label>
    <referenceTo>Tracking_Account__c</referenceTo>
    <relationshipLabel>Incomes</relationshipLabel>
    <relationshipName>Incomes</relationshipName>
    <type>Lookup</type>
</CustomField>