expense-app/main/default/objects/Income__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Additional_Info__c</columns>
    <columns>Tracking_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>