expense-app/main/default/objects/Income__c/listViews/Income_in_Australia.listView-meta.xml
<ListView>
    <fullName>Income_in_Australia</fullName>
    <columns>Date__c</columns>
    <columns>NAME</columns>
    <columns>Amount__c</columns>
    <columns>Type__c</columns>
    <columns>Sub_Type__c</columns>
    <columns>Additional_Info__c</columns>
    <columns>Tracking_Account__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Tracking_Account__c</field>
        <operation>equals</operation>
        <value>Australia</value>
    </filters>
    <label>Income in Australia</label>
</ListView>